--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,7 @@
-development:
-  adapter: async
-
-test:
-  adapter: test
-
-production:
+redis: &redis
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: demo_production
+
+production: *redis
+development: *redis
+test: *redis
