--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,15 @@
-development:
+default: &default
   adapter: postgresql
-  database: my_chat
-  pool: 5
-  username: postgres
-  password: postgres
+  encoding: unicode
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: localhost
+  port: 5432
+  database: <%= ENV['DATABASE_NAME'] %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+development:
+  <<: *default
+
+production:
+  <<: *default
