--- a/config/database.yml
+++ b/config/database.yml
@@ -1,14 +1,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: password
+  username: <%= ENV['DATABASE_USERNAME'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   host: localhost
   port: 5432
-  database: my_chat
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  database: <%= ENV['DATABASE_NAME'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
+  <<: *default
+
+production:
   <<: *default
