--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@rails/webpacker": "5.3.0",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.0",
+    "mdb-ui-kit": "^4.2.0",
+    "mdbootstrap": "^4.20.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
