--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.3.0",
+    "exifr": "^7.1.3",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.0",
     "turbolinks": "^5.2.0",
