--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_NAME=DATABASE_NAME
-DATABASE_PASSWORD=DATABASE_PASSWORD
-DATABASE_USERNAME=DATABASE_USERNAME
+DATABASE_NAME="my_chat"
+DATABASE_PASSWORD="password"
+DATABASE_USERNAME="postgres"
