--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
     "exifr": "^7.1.3",
+    "flowbite": "^1.5.2",
     "import-maps": "^0.2.4",
     "jquery": "^3.6.0",
     "mdb-ui-kit": "^4.2.0",
